# LLM-Zoomcamp-Study

./: .gitignore  Makefile  README.md  main.py  pyproject.toml
01-introduction/: README.md
01-introduction/exercise/: openai_intro.ipynb  rag-intro.ipynb
01-introduction/homework/: homework.ipynb
02-open-source/: Dockerfile  README.md  ollama_test.ipynb  ollama_test.py
02-vector-search/: README.md  homework.ipynb  hybrid_search.ipynb
03-evaluation/: homework.ipynb
03-vector-store/: homework copy.ipynb  homework.ipynb
04-monitoring/: homework.ipynb
0a-agents/: notebook.ipynb
0a-agents/homework/: homework.ipynb  mcp_client.py  weather_server.py
dlt-workshop/: dlt-hw.ipynb
dlt-workshop/db.qdrant/collection/zoomcamp_tagged_data__dlt_loads/: storage.sqlite
dlt-workshop/db.qdrant/collection/zoomcamp_tagged_data__dlt_pipeline_state/: storage.sqlite
dlt-workshop/db.qdrant/collection/zoomcamp_tagged_data__dlt_version/: storage.sqlite
dlt-workshop/db.qdrant/collection/zoomcamp_tagged_data_zoomcamp_data/: storage.sqlite
