[tool.poetry]
name = "llm-zoomcamp-study"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
tqdm = "^4.66.4"
openai = "^1.34.0"
elasticsearch = "^8.14.0"
scikit-learn = "^1.5.0"
python-dotenv = "^1.0.1"
ipykernel = "^6.29.5"
sentence-transformers = "^3.0.1"


[tool.poetry.group.dev.dependencies]
notebook = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
