[project]
name = "llm-zoomcamp-study"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dlt[qdrant]>=1.12.3",
    "elasticsearch8>=8.18.1",
    "fastmcp>=2.10.5",
    "markdown>=3.8.2",
    "openai>=1.84.0",
    "python-dotenv>=1.1.0",
    "qdrant-client[fastembed]>=1.14.2",
    "requests>=2.32.3",
    "tiktoken>=0.9.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
